--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,129 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'signing'
 
-version = '1.0.8'
+version = VERSION_NAME
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
 jar.baseName = 'avenuestack'
 
 tasks.withType(JavaCompile) {
-	options.encoding = "UTF-8"
+    options.encoding = "UTF-8"
 }
 
 dependencies {
-        compile 'org.slf4j:slf4j-api:1.7.22'
-        compile 'ch.qos.logback:logback-classic:1.2.1'
-        compile 'ch.qos.logback:logback-core:1.2.1'
-        compile 'org.apache.commons:commons-lang3:3.5'
-        compile 'commons-io:commons-io:2.5'
-        compile 'dom4j:dom4j:1.6.1'
-        compile 'jaxen:jaxen:1.1.6'
-        compile 'org.jboss.netty:netty:3.2.6.Final'
-	    compile 'com.fasterxml.jackson.core:jackson-core:2.8.8'
-	    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.8'
-	    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.8'
-		compile 'org.springframework:spring-core:4.1.6.RELEASE'
-		
-        testCompile 'junit:junit:4.12'
+    compile 'org.slf4j:slf4j-api:1.7.22'
+    compile 'ch.qos.logback:logback-classic:1.2.1'
+    compile 'ch.qos.logback:logback-core:1.2.1'
+    compile 'org.apache.commons:commons-lang3:3.5'
+    compile 'commons-io:commons-io:2.5'
+    compile 'dom4j:dom4j:1.6.1'
+    compile 'jaxen:jaxen:1.1.6'
+    compile 'org.jboss.netty:netty:3.2.6.Final'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.8.8'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.8'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.8'
+    compile 'org.springframework:spring-core:4.1.6.RELEASE'
+    testCompile 'junit:junit:4.12'
 }
 
 repositories {
-     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+}
+
+def isReleaseBuild() {
+    return VERSION_NAME.contains("SNAPSHOT") == false
+}
+
+def getReleaseRepositoryUrl() {
+    return hasProperty('RELEASE_REPOSITORY_URL') ? RELEASE_REPOSITORY_URL
+            : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+}
+
+def getSnapshotRepositoryUrl() {
+    return hasProperty('SNAPSHOT_REPOSITORY_URL') ? SNAPSHOT_REPOSITORY_URL
+            : "https://oss.sonatype.org/content/repositories/snapshots/"
+}
+
+def getRepositoryUsername() {
+    return hasProperty('NEXUS_USERNAME') ? NEXUS_USERNAME : ""
+}
+
+def getRepositoryPassword() {
+    return hasProperty('NEXUS_PASSWORD') ? NEXUS_PASSWORD : ""
 }
 
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: "http://192.168.109.91:8081/nexus/content/repositories/releases/") {
-                authentication(userName: "xxx", password: "xxx")
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            pom.groupId = GROUP
+            pom.artifactId = POM_ARTIFACT_ID
+            pom.version = VERSION_NAME
+
+            repository(url: getReleaseRepositoryUrl()) {
+                authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
             }
-            pom.version = "$version"
-            pom.artifactId = "avenuestack"
-            pom.groupId = "avenuestack"
+            snapshotRepository(url: getSnapshotRepositoryUrl()) {
+                authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
+            }
+
+            pom.project {
+                name POM_NAME
+                packaging POM_PACKAGING
+                description POM_DESCRIPTION
+                url POM_URL
+
+                scm {
+                    url POM_SCM_URL
+                    connection POM_SCM_CONNECTION
+                    developerConnection POM_SCM_DEV_CONNECTION
+                }
+
+                licenses {
+                    license {
+                        name POM_LICENCE_NAME
+                        url POM_LICENCE_URL
+                        distribution POM_LICENCE_DIST
+                    }
+                }
+
+                developers {
+                    developer {
+                        id POM_DEVELOPER_ID
+                        name POM_DEVELOPER_NAME
+                    }
+                }
+            }
         }
     }
 }
+
+signing {
+    required { isReleaseBuild() && gradle.taskGraph.hasTask("uploadArchives") }
+    sign configurations.archives
+}
+
+javadoc {
+    options {
+        encoding "UTF-8"
+        charSet 'UTF-8'
+    }
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
